OpenML v1.1 (Release date: XXXX-XX-XX):
===========
  - ...

OpenML v1.0 (Release date: 2016-11-12):
===========
  - First submission to CRAN.